test_scripts/errors/int_conversion_fail.stderr
 1 | int("not a number");
     ^^^^^^^^^^^^^^^^^^^
Error: Cannot convert string 'not a number' to int
